# keldurbenhub

./: .gitignore  AUTH_SERVER_README.md  Cargo.toml  DEPLOYMENT_README.md  QUICK_START.md  README.md  copy-frontend.sh  create-simple-server.sh  deploy-fix.sh  deploy-server.sh  deploy-simple.sh  deploy.sh  fix-glib-error.sh  keldurben-server.service  quick-fix-commands.txt  run-server.sh  start-server.bat  start-server.sh  start.sh
deploy/: Dockerfile  README.md  deploy-docker.sh  deploy.sh  docker-compose.yml  keldurben-server.service  nginx.conf
frontend/: hub.js  index.html  script.js  styles.css
frontend/games/hues-and-cues/: index.html  script.js  styles.css
frontend/games/keldurbenstickers/: index.html  script.js  styles.css
server/: Cargo.toml  README.md
server/src/: auth.rs  main.rs
simple-server/src/: main.rs
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
