[package]
name = "keldurben-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip", "fs"] }
tokio-stream = "0.1"

# Auth
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"

# DB (SQLite)
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "uuid", "macros"] }

anyhow = "1"
thiserror = "1"
once_cell = "1"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }


