[package]
name = "hues-and-cues-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = "0.5"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"

[features]
default = ["desktop"]
desktop = [
  "dep:tauri",
  "dep:tauri-plugin-shell"
]

[target.'cfg(feature = "desktop")'.build-dependencies]
tauri-build = { version = "2", features = [] }


